# siggy

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.da.md  README.de.md  README.es.md  README.fi.md  README.fr.md  README.it.md  README.md  README.nl.md  README.pt-BR.md  README.ru.md  README.sv.md  README.uk.md  README.zh-CN.md  TRANSLATING.md  install.sh
.claude/skills/siggy-cli/: SKILL.md
.github/actions/update-homebrew/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml
docs/: CNAME  book.toml
docs/solutions/architecture/: native-backend-spike-findings.md  viewstate-render-borrow-split.md
docs/solutions/database-issues/: monotonic-status-guard-drops-failed-writes-2026-06-10.md
docs/src/: changelog.md  introduction.md
docs/src/dev-guide/: architecture.md  contributing.md  data-flow.md  database.md  modules.md  protocol.md  roadmap.md  testing.md
docs/src/user-guide/: commands.md  configuration.md  faq.md  features.md  installation.md  keybindings.md  security.md  troubleshooting.md
docs/superpowers/plans/: 2026-07-07-native-backend-presage-plan.md
docs/theme/css/: irc-theme.css
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_command_parse.rs  fuzz_input_edit.rs  fuzz_json_rpc.rs  fuzz_key_combo.rs  fuzz_theme_toml.rs
scripts/: check-app-field-count.sh  publish-crate.sh
src/: app.rs  app_tests.rs  audio.rs  compose.rs  config.rs  conversation_store.rs  db.rs  debug_log.rs  demo.rs  export.rs  image_render.rs  input.rs  keybindings.rs  lib.rs  link.rs  list_overlay.rs  main.rs  preview.rs  settings_profile.rs  setup.rs  theme.rs  trigger.rs  ui.rs
src/backend/: demo.rs  mock.rs  mod.rs  signal_cli.rs
src/backend/native/: journal.rs  linking.rs  mod.rs  receive.rs  runtime.rs  store.rs  supervisor.rs
src/domain/: action_menu.rs  contacts_overlay.rs  group_menu_overlay.rs  image.rs  input.rs  lock.rs  media.rs  mod.rs  mouse.rs  overlays.rs  pending.rs  pin_duration_overlay.rs  poll_vote_overlay.rs  reaction.rs  scroll.rs  search.rs  send.rs  settings_profile_overlay.rs  typing.rs  verify_overlay.rs
src/handlers/: input.rs  keys.rs  mod.rs  signal.rs
src/signal/: client.rs  mod.rs  parse.rs  types.rs
src/signal/parse/: envelope.rs  fixtures.rs  helpers.rs  message.rs  mod.rs  poll.rs  rpc.rs
src/snapshots/: siggy__ui__snapshot_tests__about_overlay.snap  siggy__ui__snapshot_tests__disappearing_messages.snap  siggy__ui__snapshot_tests__empty_conversation.snap  siggy__ui__snapshot_tests__message_request.snap  siggy__ui__snapshot_tests__pinned_message.snap  siggy__ui__snapshot_tests__settings_overlay.snap  siggy__ui__snapshot_tests__styled_text.snap  siggy__ui__snapshot_tests__unread_marker.snap
src/ui/: chat_pane.rs  composer.rs  links.rs  mod.rs  sidebar.rs  status_bar.rs
src/ui/overlays/: about.rs  action_menu.rs  contacts.rs  delete_conversation_confirm.rs  forward.rs  group_menu.rs  help.rs  lock_screen.rs  mod.rs  palette.rs
src/ui/snapshots/: siggy__ui__snapshot_tests__about_overlay.snap  siggy__ui__snapshot_tests__chat_focused_message_scrolls_into_view.snap  siggy__ui__snapshot_tests__chat_scroll_offset_clamps_at_top.snap  siggy__ui__snapshot_tests__chat_scrolled_up_shows_older_messages.snap  siggy__ui__snapshot_tests__help_overlay.snap  siggy__ui__snapshot_tests__lock_screen.snap  siggy__ui__snapshot_tests__no_active_conversation.snap  siggy__ui__snapshot_tests__settings_overlay.snap
themes/: custom-theme-template.toml
translations/: README.da.md  README.de.md  README.es.md  README.fi.md  README.fr.md  README.it.md  README.nl.md  README.pt-BR.md  README.ru.md  README.sv.md  README.uk.md  README.zh-CN.md
