[package]
name = "siggy"
version = "1.14.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "Terminal-based Signal messenger client with vim keybindings"
repository = "https://github.com/johnsideserf/siggy"
keywords = ["signal", "tui", "terminal", "messenger", "ratatui"]
categories = ["command-line-utilities"]
# Ship only what's needed to build and install. Without this allowlist the
# package balloons to ~5.5 MiB (docs/ screenshots, banner/logos, translations,
# CI config), which both wastes every `cargo install` and stalls the upload at
# the crates.io CDN edge.
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "rust-toolchain.toml",
]

# Backend selection (#640 U7, plan R2/KTD-1): exactly one engine per binary,
# chosen at compile time. The two features are mutually exclusive, enforced
# by compile_error! guards in main.rs and lib.rs -- `cargo build
# --all-features` therefore fails BY DESIGN (see CONTRIBUTING.md).
# `native-backend` is declared ahead of its implementation (#642) so the CI
# matrix, guards, and lockfile canary are in place before presage merges.
[features]
default = ["signal-cli-backend"]
signal-cli-backend = []
native-backend = ["dep:presage", "dep:presage-store-sqlite", "dep:futures"]

[package.metadata.docs.rs]
# Build with the default backend only; --all-features would hit the
# mutual-exclusion guard.
no-default-features = false

[dependencies]
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
toml = "1.1"
# 0.38, not latest: presage-store-sqlite pins libsqlite3-sys 0.36, and the
# `links = "sqlite3"` constraint allows only one libsqlite3-sys in the graph
# (spike finding, #639). Applies to both backends; revisit when presage bumps.
rusqlite = { version = "0.38", features = ["bundled"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
arboard = { version = "3", features = ["wayland-data-control"] }
open = "5"
notify-rust = "4"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

emojis = "0.9"
icy_sixel = "0.5"
ureq = "3.3.0"

# Native engine deps (#642 U9), active only under `native-backend`. Pinned to
# the spike-validated rev (#639 findings): main HEAD of 2026-07-07 (63482efd),
# the first rev with the merged linking fix (upstream presage PR #421,
# required against Signal mobile 8.17+). default-features = false keeps CDSI
# (and its boring/cmake tree) out. Build prereq: protoc on PATH.
[dependencies.presage]
git = "https://github.com/whisperfish/presage"
rev = "63482efd0cbdc0780baf0650517c7d55f1cac05d"
default-features = false
optional = true

[dependencies.presage-store-sqlite]
git = "https://github.com/whisperfish/presage"
rev = "63482efd0cbdc0780baf0650517c7d55f1cac05d"
default-features = false
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dev-dependencies]
insta = "1"
rstest = "0.26"
tempfile = "3"

# Required by the libsignal dependency tree whenever presage is in the graph
# (presage README documents this for all downstream consumers). Inert for
# default builds: the patched crate only enters the graph under
# `native-backend`. Spike finding, #639.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
