[package]
name = "siggy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
crossterm = "0.28"

[dependencies.siggy]
path = ".."

[[bin]]
name = "fuzz_json_rpc"
path = "fuzz_targets/fuzz_json_rpc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_input_edit"
path = "fuzz_targets/fuzz_input_edit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_key_combo"
path = "fuzz_targets/fuzz_key_combo.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_command_parse"
path = "fuzz_targets/fuzz_command_parse.rs"
test = false
doc = false
bench = false
