[package]
name = "siggy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
toml = "1"
crossterm = "0.28"

[dependencies.siggy]
path = ".."
# Pin the default engine explicitly (#640 U7): fuzz_json_rpc fuzzes the
# signal-cli JSON-RPC parser, which only exists under this feature. Native
# parsing gets its own fuzz coverage later if warranted.
default-features = false
features = ["signal-cli-backend"]

[[bin]]
name = "fuzz_json_rpc"
path = "fuzz_targets/fuzz_json_rpc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_input_edit"
path = "fuzz_targets/fuzz_input_edit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_key_combo"
path = "fuzz_targets/fuzz_key_combo.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_command_parse"
path = "fuzz_targets/fuzz_command_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_theme_toml"
path = "fuzz_targets/fuzz_theme_toml.rs"
test = false
doc = false
bench = false
